# supermap

./: .clang-format  .gitignore  .gitmodules  AllowCreateLikeThis_8hpp_source.html  BST_8hpp_source.html  BinaryCollapsingSortedList_8hpp_source.html  BinaryCollapsingSortedStoragesList_8hpp_source.html  BloomFilter_8hpp_source.html  Bounds_8hpp_source.html  BstBuilder_8hpp_source.html  ByteArray_8hpp_source.html  CMakeLists.txt  Cloneable_8hpp_source.html  CountingStorageItemRegister_8hpp_source.html  DefaultFilteredKvs_8hpp_source.html  DefaultRemovableKvs_8hpp_source.html  DefaultSupermap_8hpp_source.html  DiskFileManager_8hpp_source.html  Doxyfile  EncapsulatedFileManager_8hpp_source.html  ExtractibleKeyValueStorage_8hpp_source.html  FileException_8hpp_source.html  FileManager_8hpp_source.html  Filter_8hpp_source.html  FilteredStorage_8hpp_source.html  FilteringRegister_8hpp_source.html  Findable_8hpp_source.html  HashTools_8hpp_source.html  Hasher_8hpp_source.html  IllegalArgumentException_8hpp_source.html  IllegalStateException_8hpp_source.html  IndexedStorage_8hpp_source.html  InputIterator_8hpp_source.html  InputStream_8hpp_source.html  IteratorException_8hpp_source.html  KeyHashingShardedKVS_8hpp_source.html  KeyValueShrinkableStorage_8hpp_source.html  KeyValueStorageBuilder_8hpp_source.html  KeyValueStorage_8hpp_source.html  KeyValue_8hpp_source.html  (+649 more)
.github/workflows/: cmake.yml  doxygen.yml  pages.yml
benchmark/: benchmark.cpp
cli/: CommandLineInterface.cpp  CommandLineInterface.hpp  KvsCommandHandler.cpp  KvsCommandHandler.hpp  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  (+19 more)
src/: BST.cpp  BST.hpp  BloomFilter.cpp  BloomFilter.hpp  ByteArray.cpp  ByteArray.hpp  DiskDataStorage.cpp  DiskDataStorage.hpp  DiskIndex.cpp  DiskIndex.hpp  KeyOffset.h  KeyValueStorage.hpp  MemTable.cpp  MemTable.hpp  StorageFilter.hpp  Supermap.cpp  Supermap.hpp
src/builder/: BstBuilder.hpp  DefaultFilteredKvs.hpp  DefaultRemovableKvs.hpp  DefaultSupermap.hpp  KeyValueStorageBuilder.hpp  ShardedSupermapBuilder.hpp
src/cli/: CommandLineInterface.cpp  CommandLineInterface.hpp  KvsCommandHandler.cpp
src/core/: AllowCreateLikeThis.hpp  BST.hpp  BinaryCollapsingIndex.hpp  BinaryCollapsingIndexSortedList.hpp  BinaryCollapsingSortedList.hpp  BinaryCollapsingSortedStoragesList.hpp  BloomFilter.cpp  BloomFilter.hpp  ByteArray.hpp  Cloneable.hpp  CountingStorageItemRegister.hpp  DefaultBuilder.hpp  DefaultRemovableKvs.hpp  DefaultSupermap.hpp  DiskIndex.hpp  ExtractibleKeyValueStorage.hpp  Filter.hpp  FilteredStorage.hpp  FilteringRegister.hpp  Findable.hpp  IndexedData.hpp  IndexedStorage.hpp  Key.hpp  KeyHashingShardedKVS.hpp  KeyIndex.hpp  KeyValueShrinkableStorage.hpp  KeyValueStorage.hpp  MockFilter.hpp  OrderedStorage.hpp  RemovableKvs.hpp  SingleFileIndexedStorage.hpp  SortedIndexedData.hpp  SortedSingleFileIndexedStorage.hpp  SortedStoragesList.hpp  StorageItemRegister.hpp  Supermap.hpp
src/exception/: FileException.cpp  FileException.hpp  IllegalArgumentException.cpp  IllegalArgumentException.hpp  IllegalStateException.cpp  IllegalStateException.hpp  IteratorException.cpp  IteratorException.hpp  SupermapException.cpp  SupermapException.hpp
src/hasher/: HashTools.hpp  Hasher.hpp  XXHasher.hpp
src/io/: DiskFileManager.cpp  DiskFileManager.hpp  EncapsulatedFileManager.cpp  EncapsulatedFileManager.hpp  FileManager.hpp  InputIterator.hpp  InputStream.cpp  InputStream.hpp  Iterator.hpp  OutputIterator.hpp  OutputStream.cpp  OutputStream.hpp  Parser.hpp  RamFileManager.cpp  RamFileManager.hpp  SerializeHelper.hpp  ShallowSerializer.hpp  StackMemorySerializer.hpp  TemporaryFile.hpp  TemporaryFolder.hpp  Writer.hpp
src/primitive/: Bounds.hpp  ByteArray.hpp  Enum.hpp  Formattable.hpp  Key.hpp  KeyIndex.hpp  KeyValue.hpp  MaybeRemovedValue.hpp
src/stream/: InputStream.cpp  InputStream.hpp  OutputStream.cpp  OutputStream.hpp  ParsingIterator.hpp  SerializeHelper.hpp  StackMemorySerializer.hpp  WritingIterator.hpp
test/: bloomFilterTest.cpp  overallTests.cpp  shrinkStress.cpp  supermapStress.cpp  test.cpp
